force-app/main/default/objects/Chart__c/Chart__c.object-meta.xml
<CustomObject>
    <label>Chart</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Chart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>