force-app/main/default/objects/Chart__c/fields/Abdominal_area_weight_gain_spare_tire__c.field-meta.xml
<CustomField>
    <fullName>Abdominal_area_weight_gain_spare_tire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>General health Abdominal area weight gain &quot;spare tire&quot;</description>
    <label>Abdominal area weight gain &quot;spare tire&quot;</label>
    <type>Checkbox</type>
</CustomField>