force-app/main/default/objects/Chart__c/fields/Abdominal_areaweight_gain_spare_tire__c.field-meta.xml
<CustomField>
    <fullName>Abdominal_areaweight_gain_spare_tire__c</fullName>
    <description>General health Abdominal area weight gain &quot;spare tire&quot;</description>
    <label>Abdominal area weight gain &quot;spare tire&quot;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>