force-app/main/default/objects/Chart__c/fields/Aesthetic_Consult_Comments__c.field-meta.xml
<CustomField>
    <fullName>Aesthetic_Consult_Comments__c</fullName>
    <label>Aesthetic Consult Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>