force-app/main/default/objects/Chart__c/fields/Aesthetic_consult_Membership__c.field-meta.xml
<CustomField>
    <fullName>Aesthetic_consult_Membership__c</fullName>
    <label>Aesthetic consult Membership</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Already a Member</fullName>
            </value>
            <value>
                <fullName>Enhance Membership</fullName>
            </value>
            <value>
                <fullName>Empower Membership</fullName>
            </value>
            <value>
                <fullName>Enrich Membership</fullName>
            </value>
            <value>
                <fullName>Body Contour Membership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>