force-app/main/default/objects/Chart__c/fields/Aesthetic_consult_Treatments__c.field-meta.xml
<CustomField>
    <fullName>Aesthetic_consult_Treatments__c</fullName>
    <label>Aesthetic consult Treatments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B12</fullName>
            </value>
            <value>
                <fullName>Botox</fullName>
            </value>
            <value>
                <fullName>Contour</fullName>
            </value>
            <value>
                <fullName>Dysport</fullName>
            </value>
            <value>
                <fullName>Facials/Peels</fullName>
            </value>
            <value>
                <fullName>Fractional</fullName>
            </value>
            <value>
                <fullName>FX Melasma</fullName>
            </value>
            <value>
                <fullName>IPL</fullName>
            </value>
            <value>
                <fullName>Juvederm Ultra</fullName>
            </value>
            <value>
                <fullName>Juvederm Ultra Plus</fullName>
            </value>
            <value>
                <fullName>Juvederm Voluma</fullName>
            </value>
            <value>
                <fullName>Kybella</fullName>
            </value>
            <value>
                <fullName>Kysse</fullName>
            </value>
            <value>
                <fullName>Laser Hair Removal</fullName>
            </value>
            <value>
                <fullName>LVR</fullName>
            </value>
            <value>
                <fullName>Restylane</fullName>
            </value>
            <value>
                <fullName>Restylane Defyne</fullName>
            </value>
            <value>
                <fullName>Restylane Lyft</fullName>
            </value>
            <value>
                <fullName>Restylane Refyne</fullName>
            </value>
            <value>
                <fullName>Restylane Silk</fullName>
            </value>
            <value>
                <fullName>Sculptra</fullName>
            </value>
            <value>
                <fullName>Skinvive</fullName>
            </value>
            <value>
                <fullName>Tattoo Removal</fullName>
            </value>
            <value>
                <fullName>Volbella</fullName>
            </value>
            <value>
                <fullName>Vollure</fullName>
            </value>
            <value>
                <fullName>Volux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>