force-app/main/default/objects/Chart__c/fields/Aesthetic_Consult_Units_Syrings__c.field-meta.xml
<CustomField>
    <fullName>Aesthetic_Consult_Units_Syrings__c</fullName>
    <label>Aesthetic Consult Units/Syrings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>