force-app/main/default/objects/Chart__c/fields/Any_EyeBrow_Hair_Loss_diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Any_EyeBrow_Hair_Loss_diagnosis__c</fullName>
    <description>EyeBrow Hair Loss Questionnaire</description>
    <label>Any EyeBrow Hair Loss diagnosis?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>