force-app/main/default/objects/Chart__c/fields/Any_medi__c.field-meta.xml
<CustomField>
    <fullName>Any_medi__c</fullName>
    <description>Are there any types of medications that you were taking when you noticed your eyebrow hairs falling out?</description>
    <label>Any medications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>