force-app/main/default/objects/Chart__c/fields/Any_Redness__c.field-meta.xml
<CustomField>
    <fullName>Any_Redness__c</fullName>
    <description>Facial Hair Loss Questionnaire
.Have you noticed any redness, flaking and/or inflammation to the face area?</description>
    <label>Any Redness/Flaking/Inflammation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>