force-app/main/default/objects/Chart__c/fields/Any_redness_flaking_inflammation__c.field-meta.xml
<CustomField>
    <fullName>Any_redness_flaking_inflammation__c</fullName>
    <description>Have you noticed any redness, flaking and/or inflammation to
the eyelashes (blepharitis)?</description>
    <label>Any redness/flaking /inflammation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>