force-app/main/default/objects/Chart__c/fields/Are_you_taking_supplementation__c.field-meta.xml
<CustomField>
    <fullName>Are_you_taking_supplementation__c</fullName>
    <description>EyeBrow Hair Loss Questionnaire</description>
    <label>Are you taking supplementation?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>