force-app/main/default/objects/Chart__c/fields/Areas_of_Interest_Anti_Aging__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest_Anti_Aging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Areas of Interest Anti-Aging</label>
    <type>Checkbox</type>
</CustomField>