force-app/main/default/objects/Chart__c/fields/Areas_of_Interest_None__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Interest_None__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Areas of Interest None</label>
    <type>Checkbox</type>
</CustomField>