force-app/main/default/objects/Chart__c/fields/AreasOf_Interest_Anti_Aging__c.field-meta.xml
<CustomField>
    <fullName>AreasOf_Interest_Anti_Aging__c</fullName>
    <label>Areas of Interest Anti-Aging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>