force-app/main/default/objects/Chart__c/fields/AreasOf_Interest_Dermal_Fillers__c.field-meta.xml
<CustomField>
    <fullName>AreasOf_Interest_Dermal_Fillers__c</fullName>
    <label>Areas of Interest Dermal Fillers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>