force-app/main/default/objects/Chart__c/fields/AreasOf_Interest_Laser_Hair_Removal__c.field-meta.xml
<CustomField>
    <fullName>AreasOf_Interest_Laser_Hair_Removal__c</fullName>
    <label>Areas of Interest Laser Hair Removal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>