force-app/main/default/objects/Chart__c/fields/AreasOf_Interest_None__c.field-meta.xml
<CustomField>
    <fullName>AreasOf_Interest_None__c</fullName>
    <label>Areas of Interest None</label>
    <length>255</length>
    <type>Text</type>
</CustomField>