force-app/main/default/objects/Chart__c/fields/AreasOf_Interest_Skin_Rejuvenation__c.field-meta.xml
<CustomField>
    <fullName>AreasOf_Interest_Skin_Rejuvenation__c</fullName>
    <label>Areas of Interest Skin Rejuvenation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>