force-app/main/default/objects/Chart__c/fields/BloodClots_Phlebitis_Bleeding_Disorders__c.field-meta.xml
<CustomField>
    <fullName>BloodClots_Phlebitis_Bleeding_Disorders__c</fullName>
    <description>History Of Blood clots/Phlebitis/Bleeding Disorders</description>
    <label>Blood clots/Phlebitis/Bleeding Disorders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>