force-app/main/default/objects/Chart__c/fields/Chart_Number__c.field-meta.xml
<CustomField>
    <fullName>Chart_Number__c</fullName>
    <displayFormat>C-{00000}</displayFormat>
    <label>Chart Number</label>
    <type>AutoNumber</type>
</CustomField>