force-app/main/default/objects/Chart__c/fields/Charting_Cosmetic_Visit_Types__c.field-meta.xml
<CustomField>
    <fullName>Charting_Cosmetic_Visit_Types__c</fullName>
    <label>Charting Cosmetic Visit Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cosmetic Visit</fullName>
            </value>
            <value>
                <fullName>Esthetician Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>