force-app/main/default/objects/Chart__c/fields/Charting_Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Charting_Visit_Type__c</fullName>
    <label>Charting Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cosmetic Visits</fullName>
            </value>
            <value>
                <fullName>Consents</fullName>
            </value>
            <value>
                <fullName>Membership Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>