force-app/main/default/objects/Chart__c/fields/ChemotherapyRadiation_theraphy__c.field-meta.xml
<CustomField>
    <fullName>ChemotherapyRadiation_theraphy__c</fullName>
    <description>History Of Chemotherapy/radiation theraphy</description>
    <label>Chemotherapy/radiation theraphy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>