force-app/main/default/objects/Chart__c/fields/Cool_Sculpting_Location__c.field-meta.xml
<CustomField>
    <fullName>Cool_Sculpting_Location__c</fullName>
    <label>Cool Sculpting Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>