force-app/main/default/objects/Chart__c/fields/Cool_Sculpting_No_Treatment_s__c.field-meta.xml
<CustomField>
    <fullName>Cool_Sculpting_No_Treatment_s__c</fullName>
    <label>Cool Sculpting No. Treatment(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>