force-app/main/default/objects/Chart__c/fields/Cool_Sculpting_Problem__c.field-meta.xml
<CustomField>
    <fullName>Cool_Sculpting_Problem__c</fullName>
    <label>Cool Sculpting Problem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>