force-app/main/default/objects/Chart__c/fields/Cool_Sculpting_Stamped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Cool_Sculpting_Stamped_Quantity__c</fullName>
    <label>Cool Sculpting Stamped Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>