force-app/main/default/objects/Chart__c/fields/Cool_Sculpting_Treatments_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cool_Sculpting_Treatments_Notes__c</fullName>
    <label>Cool Sculpting Treatments Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>