force-app/main/default/objects/Chart__c/fields/Cool_Sculpting_Type__c.field-meta.xml
<CustomField>
    <fullName>Cool_Sculpting_Type__c</fullName>
    <label>Cool Sculpting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>