force-app/main/default/objects/Chart__c/fields/CoolSculpting_Pricing_Comments__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Pricing_Comments__c</fullName>
    <label>CoolSculpting Pricing Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>