force-app/main/default/objects/Chart__c/fields/CoolSculpting_Pricing_Target__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Pricing_Target__c</fullName>
    <label>CoolSculpting Pricing Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>