force-app/main/default/objects/Chart__c/fields/CoolSculpting_Pricing_Total_Transformati__c.field-meta.xml
<CustomField>
    <fullName>CoolSculpting_Pricing_Total_Transformati__c</fullName>
    <label>CoolSculpting Pricing Total Transformati</label>
    <length>255</length>
    <type>Text</type>
</CustomField>