force-app/main/default/objects/Chart__c/fields/Cosmetic_consult__c.field-meta.xml
<CustomField>
    <fullName>Cosmetic_consult__c</fullName>
    <label>Cosmetic consult</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aesthetic consult</fullName>
                <label>Esthetic consult</label>
            </value>
            <value>
                <fullName>Coolsculpting consult</fullName>
            </value>
            <value>
                <fullName>Hair Restoration consult</fullName>
            </value>
            <value>
                <fullName>Hormone therapy consult</fullName>
            </value>
            <value>
                <fullName>Tattoo removal consult</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>