force-app/main/default/objects/Chart__c/fields/Cosmetic_Treatment_Today__c.field-meta.xml
<CustomField>
    <fullName>Cosmetic_Treatment_Today__c</fullName>
    <label>Cosmetic Treatment Today</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Botox/Dysport</fullName>
            </value>
            <value>
                <fullName>Hydrafacial</fullName>
            </value>
            <value>
                <fullName>Peel</fullName>
            </value>
            <value>
                <fullName>Weight Loss Injections</fullName>
            </value>
            <value>
                <fullName>Dermal Filler</fullName>
            </value>
            <value>
                <fullName>IPL</fullName>
            </value>
            <value>
                <fullName>Sculptra Body</fullName>
            </value>
            <value>
                <fullName>Dermaplaning</fullName>
            </value>
            <value>
                <fullName>Kybella</fullName>
            </value>
            <value>
                <fullName>SkinPen Microneedling</fullName>
            </value>
            <value>
                <fullName>Emsculpt</fullName>
            </value>
            <value>
                <fullName>Laser Hair Removal</fullName>
            </value>
            <value>
                <fullName>Tattoo Removal</fullName>
            </value>
            <value>
                <fullName>Facial</fullName>
            </value>
            <value>
                <fullName>Laser Vein Removal</fullName>
            </value>
            <value>
                <fullName>TruSculpt</fullName>
            </value>
            <value>
                <fullName>Fractional Laser</fullName>
            </value>
            <value>
                <fullName>Microdermabrasion</fullName>
            </value>
            <value>
                <fullName>Vanquish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>