force-app/main/default/objects/Chart__c/fields/Currently_being_treated__c.field-meta.xml
<CustomField>
    <fullName>Currently_being_treated__c</fullName>
    <description>EyeBrow Hair Loss Questionnaire</description>
    <label>Currently being treated?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>