force-app/main/default/objects/Chart__c/fields/Date_prior_hair_restoration_surgery__c.field-meta.xml
<CustomField>
    <fullName>Date_prior_hair_restoration_surgery__c</fullName>
    <description>Hair restoration HPI</description>
    <label>Date prior hair restoration surgery?</label>
    <type>Date</type>
</CustomField>