force-app/main/default/objects/Chart__c/fields/Decreased_sexdrive_libido__c.field-meta.xml
<CustomField>
    <fullName>Decreased_sexdrive_libido__c</fullName>
    <description>General health Decreased sex drive/libido</description>
    <label>Decreased sex drive/libido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>