force-app/main/default/objects/Chart__c/fields/Diagnosed_any_skin_disease_such_alopeci__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_any_skin_disease_such_alopeci__c</fullName>
    <description>such as alopecia areata, 
alopecia totalis or psoriasis?</description>
    <label>Diagnosed any skin disease?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>