force-app/main/default/objects/Chart__c/fields/Difficulty_recoveringfrom_workout__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_recoveringfrom_workout__c</fullName>
    <description>General health Difficulty recovering from workout</description>
    <label>Difficulty recovering from workout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>