force-app/main/default/objects/Chart__c/fields/Discussed_with_Patient__c.field-meta.xml
<CustomField>
    <fullName>Discussed_with_Patient__c</fullName>
    <description>Tattoo Removal Consult</description>
    <label>Discussed with Patient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical History, Allergies, Current Medications</fullName>
            </value>
            <value>
                <fullName>Process and Procedure</fullName>
            </value>
            <value>
                <fullName>Discomfort and Topical Numbing Cream</fullName>
            </value>
            <value>
                <fullName>After Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>